--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name=".templateActivity"></activity>
+
+        <activity android:name=".templateActivity" />
         <activity android:name=".SensorCrudActivity" />
         <activity android:name=".PositionCrudActivity" />
         <activity android:name=".RoleCrudActivity" />
